# sdlterm

./: .gitignore  CMakeLists.txt  meson.build
SDL_fox/: CMakeLists.txt  SDL_fox.h
libvterm-0.2/: CMakeLists.txt
src/: CMakeLists.txt  TERM_Rect.h  childprocess.cpp  childprocess.h  childprocess_unix.cpp  childprocess_windows.cpp  main.cpp  meson.build  sdlrenderer.cpp  sdlrenderer.h  sdlterm.c  sdlterm.cpp  sdlterm.h  term_config.cpp  term_config.h  vtermapp.cpp  vtermapp.h
src/fondtest/: CMakeLists.txt  fond_buffer.cpp  fond_buffer.h  main.cpp  meson.build  quad.cpp  quad.h  text.cpp  text.h
src/sdlterm/: CMakeLists.txt  childprocess.h  main.cpp  meson.build  sdlrenderer.cpp  term_config.cpp
src/vtermtest/: main.cpp  meson.build
subprojects/: getopt.wrap  vterm.wrap
subprojects/packagefiles/getopt/: meson.build
subprojects/packagefiles/sdl2_ttf/: meson.build
subprojects/packagefiles/vterm/: meson.build
termtk/: CMakeLists.txt  childprocess.h  childprocess_unix.cpp  childprocess_windows.cpp  icon.h  meson.build  sdl_app.cpp  sdl_app.h  vterm_object.cpp  vterm_object.h
vtermtest/: CMakeLists.txt  childprocess.cpp  childprocess.h  main.cpp  vtermtest.cpp  vtermtest.h
